# KeyParser

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cli.sh  controller  controller.sh  lifecycler  manager.sh
.github/workflows/: run-test-light.yml  run-test.yml
cmake/: CMakeLists.txt
include/keyparser/: binds.hpp  defines.hpp  key.hpp  parser.hpp  tasks.hpp
include/lkeyparser/: defines.hpp  parser.hpp  tasks.hpp
lib/: package.deb
package_settings/: build.sh  control
src/: binds.cpp  binds.hpp  defines.hpp  key.cpp  key.hpp  parser.cpp  parser.hpp  tasks.cpp  tasks.hpp  terminal.cpp
test/: CMakeLists.txt  Makefile  run.sh
test/cmake/: CMakeLists.txt
test/src/: main.cpp  test_task_1.cpp
tests/: CMakeLists.txt
tests/src/: key.cpp  parser.cpp
